--- a/index.html
+++ b/index.html
@@ -32,6 +32,82 @@
   </a>
 </div>
 
+<!--GRID STARTED HERE ;) -->
+<section class="mb-5">
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 1</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 2</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 3</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 1</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 2</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8 col-lg-4">
+        <div class="card">
+          <img src="images/thumbnail.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gorille 3</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
