--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home page</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/master.min.css">
   </head>
   <body>
     <!--NAVBAR-->
