--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="col-sm-5">
         <h1 class="text-primary">ECV Device Lab</h1>
         <p class="text-secondary">L'ECV fournit un laboratoire portatif pour les professionnels et tout ceux souhaitant une vérification de leur site web.</p>
-        <button type="button" class="btn btn-primary btn-lg">Découvrir</button>
+        <button type="button" class="btn btn-yellow btn-lg">Découvrir</button>
       </div>
       <div class="col-sm-7 justify-content-end">
       	<img src="images/home_page/illus-devicelab-welcome.png" class="float-right">
