duplicate first organism

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     </div>
   </nav></div>
   <!--FIN NAVBAR-->
+
   <!-- GRID -->
-  <section class="container">
+  <section class="container mb-5">
     <div class="row align-items-center mb-5">
       <div class="col-sm-5">
         <h1 class="text-primary">ECV Device Lab</h1>
@@ -52,18 +53,41 @@
 
   <img src="images/home_page/btn-circle@2x.png" alt="" class="col-sm-1 offset-md-6">
 
-  <section class="container row-mt-7">
+  <section class="container mb-5 mt-5">
     <div class="row align-items-center mb-5">
       <div class="col-sm-5">
-        <h1 class="text-primary">ECV Device Lab</h1>
+        <h2 class="text-primary">Pour tout le monde</h2>
         <p class="text-secondary">Ce Device Lab est destiné à chaque personne souhaitant améliorer la compatibilité de son site web sur plusieurs tailles d'écran et plusieurs navigateurs.</p>
       </div>
       <div class="col-sm-7 justify-content-end">
-      	<img src="images/home_page/illus-devicelab-welcome.png" class="float-right">
+      	<img src="images/home_page/illus-devicelab-for-everybody.png" class="float-right">
       </div>
     </div>
   </section>
 
+  <section class="container mb-5 mt-5">
+    <div class="row align-items-center mb-5">
+      <div class="col-sm-5">
+        <h2 class="text-primary">Efficace & puissant !</h2>
+        <p class="text-secondary">Avec Browser Sync, vous pouvez régler votre site Web en temps réel sur tous les appareils. Et vous pouvez avoir des retours d’utilisateurs avec Silverback.</p>
+      </div>
+      <div class="col-sm-7 justify-content-end">
+      	<img src="images/home_page/illus-devicelab-effective-strong.png" class="float-right">
+      </div>
+    </div>
+  </section>
+
+  <section class="container mb-5 mt-5">
+    <div class="row align-items-center mb-5">
+      <div class="col-sm-5">
+        <h2 class="text-primary">Partage !</h2>
+        <p class="text-secondary">Vous serez assisté par une équipe d'étudiants qui vous aidera dans ce processus de compatibilité grâce à un rapport en direct et papier.</p>
+      </div>
+      <div class="col-sm-7 justify-content-end">
+      	<img src="images/home_page/illus-devicelab-share.png" class="float-right">
+      </div>
+    </div>
+  </section>
 
   </body>
 </html>
